# GenTale

./: Cargo.toml
Components/: Cargo.toml
Components/src/: lib.rs
Components/src/Physics/: mod.rs
Components/src/Player/: mod.rs
Components/src/Sprite/: mod.rs
Components/src/clickable/: mod.rs
Components/src/physics/: mod.rs
Components/src/player_movement/: mod.rs
Components/src/sprite/: mod.rs
Entities/: Cargo.toml
Entities/src/: button.rs  lib.rs  main_character.rs
Entities/src/Main_Character/: main_character.json  mod.rs
Entities/src/button/: button.json  mod.rs
Systems/: Cargo.toml
Systems/src/: draw.rs  lib.rs  update_button.rs
Systems/src/move_player/: mod.rs
main/: Cargo.toml
main/resources/JSON/: main_character.json  start_button.json  start_scene.json
main/src/: main.rs
main/src/Draw/: mod.rs
main/src/Input/: mod.rs
main/src/draw/: mod.rs
main/src/input/: mod.rs
main/src/main_constants/: mod.rs
main/src/scene/: mod.rs  start_scene.rs
main/src/state/: mod.rs
