[package]
name = "Components"
version = "0.1.0"
authors = ["Tyler Moroso <tlmoroso55@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
specs = "0.15.1"
specs-derive = "0.4.0"
mint = "0.5.4"
warmy = "0.13.0"
serde = "1.0.104"